--- a/home.html
+++ b/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olimpiadas</title>
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="home/grid.css">
+    <link rel="stylesheet" href="home/styles.css">
     <script src="Home.js"></script>
     <link rel="icon" type="image/x-icon" href="olimpiadas.jpg">
 </head>
 <body>
     <header>
-        <img src="olimpiadas.jpg" alt="olimpiadas Logo" class="logo">
+        <img src="home/olimpiadas.jpg" alt="olimpiadas Logo" class="logo">
         <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>     
     </header>
 
@@ -19,37 +19,37 @@
         <section class="grid-container">
             <div class="card">
                 <a href="">
-                    <img src="" alt="volei">
+                    <img src="home/olimpiadas.jpg" alt="volei">
+                    <h2>Volei femenino</h2>
+                </a>
+            </div>
+            <div class="card">
+                <a href="">
+                    <img src="home/olimpiadas.jpg" alt="volei">
                     <h2>sei la</h2>
                 </a>
             </div>
             <div class="card">
                 <a href="">
-                    <img src="" alt="volei">
+                    <img src="home/olimpiadas.jpg" alt="volei">
                     <h2>sei la</h2>
                 </a>
             </div>
             <div class="card">
                 <a href="">
-                    <img src="" alt="volei">
+                    <img src="home/olimpiadas.jpg" alt="volei">
                     <h2>sei la</h2>
                 </a>
             </div>
             <div class="card">
                 <a href="">
-                    <img src="" alt="volei">
+                    <img src="home/olimpiadas.jpg" alt="volei">
                     <h2>sei la</h2>
                 </a>
             </div>
             <div class="card">
                 <a href="">
-                    <img src="" alt="volei">
-                    <h2>sei la</h2>
-                </a>
-            </div>
-            <div class="card">
-                <a href="">
-                    <img src="" alt="volei">
+                    <img src="home/olimpiadas.jpg" alt="volei">
                     <h2>sei la</h2>
                 </a>
             </div>
