--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -6,7 +6,7 @@
     <title>Refreskar | Home</title>
     <link rel="stylesheet" href="Home/grid.css">
     <link rel="stylesheet" href="Home/styles.css">
-    <link rel="icon" type="image/x-icon" href="Home/logo.png">
+    <link rel="icon" type="image/x-icon" href="home/olimpiadas.jpg">
 </head>
 <body>
     <header>
@@ -22,6 +22,6 @@
                 <li><a href="#">botao</a></li>
             </ul>
         </nav>
-    </header>
+    </header>   
 </body>
 </html>
