--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -19,7 +19,7 @@
                 <li><a href="#">botao</a></li>
                 <li><a href="#">botao</a></li>
                 <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
+                <li><a href="Medalhas.html">Medalhas</a></li>
             </ul>
         </nav>
     </header>   
