--- a/home.html
+++ b/home.html
@@ -48,9 +48,9 @@
                 </a>
             </div>
             <div class="card">
-                <a href="">
+                <a href="Medalhas.html">
                     <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
+                    <h2>Medalhas</h2>
                 </a>
             </div>
         </section>
