--- a/Medalhas.html
+++ b/Medalhas.html
@@ -6,15 +6,15 @@
     <title>Refreskar | Home</title>
     <link rel="stylesheet" href="Medalhas/grid.css">
     <link rel="stylesheet" href="Medalhas/style.css">
-    <link rel="icon" type="image/x-icon" href="Home/logo.png">
+    <link rel="icon" type="image/x-icon" href="home/olimpiadas.jpg">
 </head>
 <body>
     <header>
-        <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
+        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Sobre o Volei</a></li>
+                <li><a href="SobreVolei.html">Sobre o Volei</a></li>
                 <li><a href="#">botao</a></li>
                 <li><a href="#">botao</a></li>
                 <li><a href="#">botao</a></li>
