Paginas novas falta o conteudo e linkar com css e grid
a

--- a/home.html
+++ b/home.html
@@ -24,33 +24,34 @@
                 </a>
             </div>
             <div class="card">
-                <a href="">
+                <a href="Regras.html">
                     <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
+                    <h2>Regras</h2>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="Medalhas.html">
+                    <img src="home/olimpiadas.jpg" alt="volei">
+                    <h2>Medalhas</h2>
                 </a>
             </div>
             <div class="card">
-                <a href="">
+                <a href="Ranking.html">
                     <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
+                    <h2>Ranking</h2>
                 </a>
             </div>
             <div class="card">
-                <a href="">
+                <a href="masc.html">
                     <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
+                    <h2>Masculino</h2>
                 </a>
             </div>
             <div class="card">
-                <a href="">
+                <a href="fem.html">
                     <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
-                </a>
-            </div>
-            <div class="card">
-                <a href="">
-                    <img src="home/olimpiadas.jpg" alt="volei">
-                    <h2>sei la</h2>
+                    <h2>Feminino</h2>
                 </a>
             </div>
         </section>
