--- a/Paises.html
+++ b/Paises.html
@@ -18,7 +18,7 @@
                 <li><a href="Regras.html">Regras</a></li>
                 <li><a href="#">Países</a></li>
                 <li><a href="Medalhas.html">Medalhas</a></li>
-                <li><a href="fem.html">Femenino</a></li>
+                <li><a href="fem.html">Feminino</a></li>
                 <li><a href="masc.html">Masculino</a></li>
             </ul>
         </nav>
