--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -13,13 +13,13 @@
         <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#">Sobre o Volei</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
+                <li><a href="Regras.html">Regras</a></li>
+                <li><a href="Paises.html">Países</a></li>
+                <li><a href="Medalhas.html">Medalhas</a></li>
+                <li><a href="fem.html">Feminino</a></li>
+                <li><a href="masc.html">Masculino</a></li>
             </ul>
         </nav>
     </header>   
