--- a/Paises.html
+++ b/Paises.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
+    <title>Paises</title>
     <link rel="stylesheet" href="Paises/grid.css">
     <link rel="stylesheet" href="Paises/style.css">
     <link rel="icon" type="image/x-icon" href="Home/olimpiadas.jpg">
 </head>
 <body>
     <header>
-        <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
-        <nav>
+        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="SobreVolei.html">Sobre o Volei</a></li>
