--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -10,27 +10,20 @@
 </head>
 <body>
     <header>
-        <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
+        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo"> 
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="#">Sobre o Volei</a></li>
-<<<<<<< HEAD
                 <li><a href="Regras.html">Regras</a></li>
                 <li><a href="Paises.html">Países</a></li>
                 <li><a href="Medalhas.html">Medalhas</a></li>
                 <li><a href="fem.html">Feminino</a></li>
                 <li><a href="masc.html">Masculino</a></li>
-=======
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="#">botao</a></li>
-                <li><a href="Medalhas.html">Medalhas</a></li>
->>>>>>> 00af8f5619c424ebb19a42adc3c30e1e04e68705
+
             </ul>
         </nav>
     </header> 
-    <h1>a</h1>  
+    <h1>O volei e bem legal</h1>  
 </body>
 </html>
