--- a/fem.html
+++ b/fem.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
-        <nav>
+        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
                 
                 <li><a href="home.html">Home</a></li>
