--- a/masc.html
+++ b/masc.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Home/logo.png" alt="Refreskar Logo" class="logo">
+        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo">
         <nav>
             <ul>
                 
