--- a/Regras.html
+++ b/Regras.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo">        <nav>
+        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="SobreVolei.html">Sobre o Volei</a></li>
