--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Home/olimpiadas.jpg" alt="Refreskar Logo" class="logo"> 
+        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo"> 
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
