--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
     <!-- Carrossel de Imagens -->
     <div class="carousel-container">
         <div class="carousel-slide">
-            <img src="home/olimpiadas.jpg" alt="Imagem 1">
-            <img src="home/olimpiadas.jpg" alt="Imagem 2">
-            <img src="home/olimpiadas.jpg" alt="Imagem 3">
+            <img src="home/foto de time.webp" alt="Imagem 1">
+            <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Imagem 2">
+            <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Imagem 3">
             <img src="home/olimpiadas.jpg" alt="Imagem 4">
         </div>
         <a class="prev" onclick="mudarImagem(-1)">&#10094;</a>
