--- a/home.html
+++ b/home.html
@@ -9,8 +9,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="home/logodeparis.png" alt="Logo">
-        </div>
+            <a href="index.html" id="logo-button">
+                <img src="home/olimpiadas.jpg" alt="Logo Home">
+            </a>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
