--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html" id="logo-button">
-                <img src="home/olimpiadas.jpg" alt="Logo Home">
+                <img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo Home">
             </a>
         <nav>
             <ul>
