linkado quase certo

--- a/Ranking.html
+++ b/Ranking.html
@@ -20,6 +20,7 @@
                 <li><a href="Medalhas.html">Medalhas</a></li>
                 <li><a href="fem.html">Feminino</a></li>
                 <li><a href="masc.html">Masculino</a></li>
+                <li><a href="#">Ranking</a></li>
             </ul>
         </nav>
     </header>
