--- a/Regras.html
+++ b/Regras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regras</title>
+    <title>Ranking</title>
     <link rel="stylesheet" href="Medalhas/grid.css">
     <link rel="stylesheet" href="Medalhas/style.css">
     <link rel="icon" type="image/x-icon" href="Home/logo.png">
@@ -12,6 +12,7 @@
     <header>
         <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
+                
                 <li><a href="home.html">Home</a></li>
                 <li><a href="SobreVolei.html">Sobre o Volei</a></li>
                 <li><a href="#">Regras</a></li>
@@ -19,6 +20,7 @@
                 <li><a href="Medalhas.html">Medalhas</a></li>
                 <li><a href="fem.html">Feminino</a></li>
                 <li><a href="masc.html">Masculino</a></li>
+                <li><a href="Ranking.html">Ranking</a></li>
             </ul>
         </nav>
     </header>
