--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Vôlei</a></li>
-                <li><a href="#">Jogadores</a></li>
-                <li><a href="#">Ranking</a></li>
+                <li><a href="SobreVolei.html">Sobre Volei</a></li>
+                <li><a href="Paises.html">Paises</a></li>
+                <li><a href="Medalhas.html">Medalhas</a></li>
+                <li><a href="Ranking.html">Ranking</a></li>
             </ul>
         </nav>
     </header>
