--- a/masc.html
+++ b/masc.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">
-        <nav>
+        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
                 
                 <li><a href="home.html">Home</a></li>
