--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Refreskar | Home</title>
-    <link rel="stylesheet" href="Home/grid.css">
-    <link rel="stylesheet" href="Home/styles.css">
-    <link rel="icon" type="image/x-icon" href="home/olimpiadas.jpg">
+    <title>Ranking</title>
+    <link rel="stylesheet" href="Medalhas/grid.css">
+    <link rel="stylesheet" href="Medalhas/style.css">
+    <link rel="icon" type="image/x-icon" href="Home/logo.png">
 </head>
 <body>
     <header>
-        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo"> 
-        <nav>
+        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">        <nav>
             <ul>
+                
                 <li><a href="home.html">Home</a></li>
                 <li><a href="#">Sobre o Volei</a></li>
                 <li><a href="Regras.html">Regras</a></li>
@@ -20,10 +20,8 @@
                 <li><a href="Medalhas.html">Medalhas</a></li>
                 <li><a href="fem.html">Feminino</a></li>
                 <li><a href="masc.html">Masculino</a></li>
-
             </ul>
         </nav>
-    </header> 
-    <h1>O volei e bem legal</h1>  
+    </header>
 </body>
 </html>
