--- a/home.html
+++ b/home.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Vôlei</title>
+    <title>Home do Vôlei</title>
     <link rel="stylesheet" href="home/styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html" id="logo-button">
-                <img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo Home">
-            </a>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="SobreVolei.html">Sobre Volei</a></li>
-                <li><a href="Paises.html">Paises</a></li>
-                <li><a href="Medalhas.html">Medalhas</a></li>
-                <li><a href="Ranking.html">Ranking</a></li>
-            </ul>
-        </nav>
+        <div class="header-content">
+            <div class="logo">
+                <a href="home.html" id="logo-button">
+                    <img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo Home">
+                </a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="SobreVolei.html">Sobre Volei</a></li>
+                    <li><a href="Paises.html">Paises</a></li>
+                    <li><a href="Medalhas.html">Medalhas</a></li>
+                    <li><a href="Ranking.html">Ranking</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- Carrossel de Imagens -->
@@ -38,22 +40,32 @@
     <!-- Seção de Jogadores -->
     <section class="players">
         <div class="player-card">
-            <img src="player1.jpg" alt="Jogador 1">
+            <img src="home/foto de time.webp" alt="Jogador 1">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#">Saiba mais</a>
         </div>
         <div class="player-card">
-            <img src="player2.jpg" alt="Jogador 2">
+            <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Jogador 2">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#">Saiba mais</a>
         </div>
         <div class="player-card">
-            <img src="player3.jpg" alt="Jogador 3">
+            <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Jogador 3">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#">Saiba mais</a>
         </div>
         <div class="player-card">
-            <img src="player4.jpg" alt="Jogador 4">
+            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Jogador 4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#">Saiba mais</a>
+        </div>
+        <div class="player-card">
+            <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Jogador 4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#">Saiba mais</a>
+        </div>
+        <div class="player-card">
+            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Jogador 4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#">Saiba mais</a>
         </div>
