--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
             <a href="#">Saiba mais</a>
         </div>
         <div class="player-card">
-            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Jogador 4">
+            <img src="home/hgapeth.avif" alt="Jogador 4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#">Saiba mais</a>
         </div>
