--- a/home.html
+++ b/home.html
@@ -9,11 +9,9 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">
                 <a href="home.html" id="logo-button">
                     <img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo Home">
                 </a>
-            </div>
             <nav>
                 <ul>
                     <li><a href="SobreVolei.html">Sobre Volei</a></li>
@@ -31,7 +29,7 @@
             <img src="home/foto de time.webp" alt="Imagem 1">
             <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Imagem 2">
             <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Imagem 3">
-            <img src="home/olimpiadas.jpg" alt="Imagem 4">
+            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Imagem 4">
         </div>
         <a class="prev" onclick="mudarImagem(-1)">&#10094;</a>
         <a class="next" onclick="mudarImagem(1)">&#10095;</a>
@@ -65,6 +63,20 @@
             <a href="#">Saiba mais</a>
         </div>
     </section>
+
+    
+    <div class="container">
+        <div class="text-box">
+            <h1>O que é Vôlei?</h1>
+            <h3>E sua importância no Mundo do esporte</h3>
+            <p>O vôlei oferece benefícios significativos para a saúde física e mental, promove habilidades sociais e trabalho em equipe, e contribui para a inclusão e a celebração cultural.</p>
+            <p>O vôlei é um esporte coletivo jogado em uma quadra dividida por uma rede, com duas equipes de seis jogadores cada. O objetivo é enviar a bola para o lado adversário da quadra para marcar pontos. As equipes têm três jogadores na linha de frente e três na linha de trás, e a bola pode ser tocada no máximo três vezes antes de ser enviada de volta. Os jogadores devem rotacionar suas posições após ganhar o serviço e podem fazer substituições durante o jogo. O jogo é disputado em sets, e a equipe precisa ganhar um número específico de sets para vencer (geralmente 3 de 5). O vôlei também possui variantes, como o vôlei de praia, jogado ao ar livre com duas pessoas por equipe.</p>
+            <a href="#">Saiba mais</a>
+        </div>
+        <div class="image-box">
+            <img src="image.png" alt="Jogadoras de Vôlei em ação">
+        </div>
+    </div>
 
     <script src="home/script.js"></script>
 </body>
