coloquei coisa no sobre jogadores

--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
-    <link rel="stylesheet" href="Medalhas/grid.css">
-    <link rel="stylesheet" href="Medalhas/style.css">
-    <link rel="icon" type="image/x-icon" href="Home/logo.png">
+    <title>Sobre os Jogadores</title>
+    <link rel="stylesheet" href="Sobre/style.css">
 </head>
 <body>
     <header>
-        <img src="home/logodeparis.png" alt="Refreskar Logo" class="logo">        <nav>
-            <ul>
-                
-                <li><a href="home.html">Home</a></li>
-                <li><a href="#">Sobre o Volei</a></li>
-                <li><a href="Regras.html">Regras</a></li>
-                <li><a href="Paises.html">Países</a></li>
-                <li><a href="Medalhas.html">Medalhas</a></li>
-                <li><a href="fem.html">Feminino</a></li>
-                <li><a href="masc.html">Masculino</a></li>
-            </ul>
+        <a href="home.html" class="logo"><img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo"></a>
+        <nav>
+            <a href="#">SOBRE</a>
+            <a href="#">JOGADORES</a>
+            <a href="#">VOLEI</a>
+            <a href="#">RANKING</a>
         </nav>
     </header>
+
+    <main>
+        <h1>Sobre os jogadores</h1>
+        <section class="jogadores">
+            <div class="jogador">
+                <button class="jogador-btn">
+                    <img src="home/foto de time.webp" alt="Jogador 1">
+                </button>
+                <div class="info">
+                    <h2>Nome do jogador</h2>
+                    <p>Um pouco sobre o jogador</p>
+                </div>
+            </div>
+
+            <div class="jogador">
+                <button class="jogador-btn">
+                    <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Jogador 2">
+                </button>
+                <div class="info">
+                    <h2>Nome do jogador</h2>
+                    <p>Um pouco sobre o jogador</p>
+                </div>
+            </div>
+
+            <div class="jogador">
+                <button class="jogador-btn">
+                    <img src="home/hgapeth.avif" alt="Jogador 3">
+                </button>
+                <div class="info">
+                    <h2>Nome do jogador</h2>
+                    <p>Um pouco sobre o jogador</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
