--- a/SobreVolei.html
+++ b/SobreVolei.html
@@ -49,6 +49,27 @@
                     <p>Um pouco sobre o jogador</p>
                 </div>
             </div>
+            
+            <div class="jogador">
+                <button class="jogador-btn">
+                    <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Jogador 2">
+                </button>
+                <div class="info">
+                    <h2>Nome do jogador</h2>
+                    <p>Um pouco sobre o jogador</p>
+                </div>
+            </div>
+
+            <div class="jogador">
+                <button class="jogador-btn">
+                    <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Jogador 2">
+                </button>
+                <div class="info">
+                    <h2>Nome do jogador</h2>
+                    <p>Um pouco sobre o jogador</p>
+                </div>
+            </div>
+
         </section>
     </main>
 </body>
