--- a/home.html
+++ b/home.html
@@ -1,84 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home do Vôlei</title>
-    <link rel="stylesheet" href="home/styles.css">
+    <title>Sobre os Jogadores</title>
+    <link rel="stylesheet" href="Sobre/style.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <nav>
-                <a href="home.html" id="logo-button">
-                    <img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo Home">
-                </a>
-            
-                <ul>
-                    <li><a href="SobreVolei.html">Sobre Volei</a></li>
-                    <li><a href="Paises.html">Paises</a></li>
-                    <li><a href="Medalhas.html">Medalhas</a></li>
-                    <li><a href="Ranking.html">Ranking</a></li>
-                </ul>
-            </nav>
-        </div>
+        <a href="home.html" class="logo"><img src="home/d1074454-23a9-47fe-bad7-a40e08de6404-removebg-preview.png" alt="Logo"></a>
+        <nav>
+            <a href="SobreVolei.html">SOBRE</a>
+            <a href="#">JOGADORES</a>
+            <a href="#">VOLEI</a>
+            <a href="#">RANKING</a>
+        </nav>
     </header>
 
-    <!-- Carrossel de Imagens -->
-    <div class="carousel-container">
-        <div class="carousel-slide">
-            <img src="home/foto de time.webp" alt="Imagem 1">
-            <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Imagem 2">
-            <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Imagem 3">
-            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Imagem 4">
-        </div>
-        <a class="prev" onclick="mudarImagem(-1)">&#10094;</a>
-        <a class="next" onclick="mudarImagem(1)">&#10095;</a>
-    </div>
-
-    <!-- Seção de Jogadores -->
-    <section class="players">
-        <div class="player-card">
-            <img src="home/foto de time.webp" alt="Jogador 1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-        <div class="player-card">
-            <img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Jogador 2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-        <div class="player-card">
-            <img src="home/vôlei-vôlei-de-praia-jogos_olimpicos_deparis-olimpiada_de_paris-1715018086.jpg" alt="Jogador 3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-        <div class="player-card">
-            <img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Jogador 4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-        <div class="player-card">
-            <img src="home/hgapeth.avif" alt="Jogador 4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-    </section>
-
-    
-    <div class="container">
-        <div class="text-box">
-            <h1>O que é Vôlei?</h1>
-            <h3>E sua importância no Mundo do esporte</h3>
-            <p>O vôlei oferece benefícios significativos para a saúde física e mental, promove habilidades sociais e trabalho em equipe, e contribui para a inclusão e a celebração cultural.</p>
-            <p>O vôlei é um esporte coletivo jogado em uma quadra dividida por uma rede, com duas equipes de seis jogadores cada. O objetivo é enviar a bola para o lado adversário da quadra para marcar pontos. As equipes têm três jogadores na linha de frente e três na linha de trás, e a bola pode ser tocada no máximo três vezes antes de ser enviada de volta. Os jogadores devem rotacionar suas posições após ganhar o serviço e podem fazer substituições durante o jogo. O jogo é disputado em sets, e a equipe precisa ganhar um número específico de sets para vencer (geralmente 3 de 5). O vôlei também possui variantes, como o vôlei de praia, jogado ao ar livre com duas pessoas por equipe.</p>
-            <a href="#">Saiba mais</a>
-        </div>
-        <div class="image-box">
-            <img src="image.png" alt="Jogadoras de Vôlei em ação">
-        </div>
-    </div>
-
-    <script src="home/script.js"></script>
+    <h1>Home</h1>
 </body>
 </html>
