--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre os Jogadores</title>
     <link rel="stylesheet" href="Sobre/style.css">
+    <link rel="stylesheet" href="home/styles.css">
 </head>
 <body>
     <header>
@@ -17,6 +18,20 @@
         </nav>
     </header>
 
-    <h1>Home</h1>
+    <div class="carousel">
+        <div class="carousel-container">
+            <div class="carousel-slide"><img src="home/Brasil-Pre-Olimpico-de-Volei-aspect-ratio-512-320.webp" alt="Imagem 1"></div>
+            <div class="carousel-slide"><img src="home/foto de time.webp" alt="Imagem 2"></div>
+            <div class="carousel-slide"><img src="home/Volei-Ze-Roberto-divulga-nova-lista-de-jogadoras-q0306677500202104091652.webp" alt="Imagem 3"></div>
+            <!-- Adicione mais slides se necessário -->
+        </div>
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+    </div>
+
+    <script src="home/script.js"></script>
 </body>
 </html>
+
+
+    
